--- a/wildboys.html
+++ b/wildboys.html
@@ -246,14 +246,14 @@ var items = [
    // {id: 'blitzcrank', name: 'Blitzcrank', image: 'iconos/blitzcrank.jpg'},
     {id: 'brand', name: 'Brand', image: 'iconos/brand.jpg'},
     {id: 'braum', name: 'Braum', image: 'iconos/braum.jpg'},
-  {id: 'corki', name: 'Corki', image: 'iconos/corki.jpg'},
+ // {id: 'corki', name: 'Corki', image: 'iconos/corki.jpg'},
     {id: 'darius', name: 'Darius', image: 'iconos/darius.jpg'},
    {id: 'drmundo', name: 'Dr. Mundo', image: 'iconos/drmundo.jpg'},
     {id: 'draven', name: 'Draven', image: 'iconos/draven.jpg'},
     {id: 'ekko', name: 'Ekko', image: 'iconos/ekko.jpg'},
     {id: 'ezreal', name: 'Ezreal', image: 'iconos/ezreal.jpg'},
   // {id: 'fizz', name: 'Fizz', image: 'iconos/fizz.jpg'},
-  {id: 'galio', name: 'Galio', image: 'iconos/galio.jpg'},
+  //{id: 'galio', name: 'Galio', image: 'iconos/galio.jpg'},
     {id: 'garen', name: 'Garen', image: 'iconos/garen.jpg'},
     {id: 'gragas', name: 'Gragas', image: 'iconos/gragas.jpg'},
     {id: 'graves', name: 'Graves', image: 'iconos/graves.jpg'},
@@ -262,15 +262,15 @@ var items = [
     {id: 'jayce', name: 'Jayce', image: 'iconos/jayce.jpg'},
    {id: 'jhin', name: 'Jhin', image: 'iconos/jhin.jpg'},
  {id: 'kassadin', name: 'Kassadin', image: 'iconos/kassadin.jpg'},
-   {id: 'kennen', name: 'Kennen', image: 'iconos/kennen.jpg'},
+  // {id: 'kennen', name: 'Kennen', image: 'iconos/kennen.jpg'},
  // {id: 'khazix', name: 'Kha\'Zix', image: 'iconos/khazix.png'},
    {id: 'leesin', name: 'Lee Sin', image: 'iconos/leesin.jpg'},
     {id: 'lucian', name: 'Lucian', image: 'iconos/lucian.jpg'},
   // {id: 'malphite', name: 'Malphite', image: 'iconos/malphite.jpg'},
     {id: 'masteryi', name: 'Master Yi', image: 'iconos/masteryi.jpg'},
   {id: 'nasus', name: 'Nasus', image: 'iconos/nasus.jpg'},
-  {id: 'nautilus', name: 'Nautilus', image: 'iconos/nautilus.jpg'},
-    {id: 'nunu', name: 'Nunu & Willump', image: 'iconos/nunu.jpg'},
+ // {id: 'nautilus', name: 'Nautilus', image: 'iconos/nautilus.jpg'},
+    //{id: 'nunu', name: 'Nunu & Willump', image: 'iconos/nunu.jpg'},
     {id: 'olaf', name: 'Olaf', image: 'iconos/olaf.jpg'},
  {id: 'ornn', name: 'Ornn', image: 'iconos/ornn.jpg'},
     {id: 'pantheon', name: 'Pantheon', image: 'iconos/pantheon.jpg'},
@@ -283,15 +283,16 @@ var items = [
     {id: 'shen', name: 'Shen', image: 'iconos/shen.jpg'},
    {id: 'sion', name: 'Sion', image: 'iconos/sion.jpg'},
     {id: 'singed', name: 'Singed', image: 'iconos/singed.jpg'},
-   {id: 'teemo', name: 'Teemo', image: 'iconos/teemo.jpg'},
+  // {id: 'teemo', name: 'Teemo', image: 'iconos/teemo.jpg'},
     {id: 'swain', name: 'Swain', image: 'iconos/swain.jpg'},
+    {id: 'talon', name: 'Talon', image: 'iconos/talon.jpg'},
     {id: 'thresh', name: 'Thresh', image: 'iconos/thresh.jpg'},
     {id: 'tryndamere', name: 'Tryndamere', image: 'iconos/tryndamere.jpg'},
     {id: 'twistedfate', name: 'Twisted Fate', image: 'iconos/twistedfate.jpg'},
-  {id: 'twitch', name: 'Twitch', image: 'iconos/twitch.jpg'},
+  //{id: 'twitch', name: 'Twitch', image: 'iconos/twitch.jpg'},
     {id: 'urgot', name: 'Urgot', image: 'iconos/urgot.jpg'},
     {id: 'varus', name: 'Varus', image: 'iconos/varus.jpg'},
-  {id: 'veigar', name: 'Veigar', image: 'iconos/veigar.jpg'},
+  //{id: 'veigar', name: 'Veigar', image: 'iconos/veigar.jpg'},
   {id: 'vladimir', name: 'Vladimir', image: 'iconos/vladimir.jpg'},
 {id: 'volibear', name: 'Volibear', image: 'iconos/volibear.jpg'},
     {id: 'warwick', name: 'Warwick', image: 'iconos/warwick.jpg'},
@@ -300,7 +301,7 @@ var items = [
     {id: 'yasuo', name: 'Yasuo', image: 'iconos/yasuo.jpg'},
     {id: 'yone', name: 'Yone', image: 'iconos/yone.jpg'},
    {id: 'zed', name: 'Zed', image: 'iconos/zed.jpg'},
- {id: 'ziggs', name: 'Ziggs', image: 'iconos/ziggs.jpg'}
+ //{id: 'ziggs', name: 'Ziggs', image: 'iconos/ziggs.jpg'}
 
 ];
 
