--- a/index.html
+++ b/index.html
@@ -219,6 +219,8 @@ button.disabled:hover {
     <p>
 <a href="faltantes.html">No en posesión</a>
     </p><p>
+<a href="wrskins.html">Skins</a>
+    </p><p>
 <a href="precure.html">Pretty Cure</a>
     </p>
 
