--- a/wrskins.html
+++ b/wrskins.html
@@ -235,7 +235,7 @@ button.disabled:hover {
 
 var items = [
     // Define your items here
-    
+        {id: 'ahri', name: 'Ahri', image: 'iconos/AhriKDA.jpg'},
     {id: 'ashe', name: 'Ashe', image: 'iconos/AsheFeerica.jpg'},
     {id: 'kayn', name: 'Kayn', image: 'iconos/KaynBB.jpg'},
     {id: 'akali', name: 'Akali', image: 'iconos/AkaliKDA.jpg'},
@@ -249,6 +249,8 @@ var items = [
     {id: 'masteryi', name: 'Master Yi', image: 'iconos/YiEspada.jpg'},
     {id: 'rakan', name: 'Rakan', image: 'iconos/RakanDawn.jpg'},
     {id: 'shen', name: 'Shen', image: 'iconos/ShenPulso.jpg'},
+        {id: 'shyvana', name: 'Shyvana', image: 'iconos/ShyvanaGalaxy.jpg'},
+        {id: 'sona', name: 'Sona', image: 'iconos/SonaLove.jpg'},
     {id: 'vayne', name: 'Vayne', image: 'iconos/VayneLuz.jpg'},
     {id: 'xayah', name: 'Xayah', image: 'iconos/XayahDusk.jpg'},
     {id: 'xinzhao', name: 'Xin Zhao', image: 'iconos/LeesinAlma.jpg'},
