--- a/wrskins.html
+++ b/wrskins.html
@@ -208,7 +208,7 @@ button.disabled:hover {
 <body>
 <h1>Tus waifus</h1>
 
-<p>Elige a tu campeón favorito.</p>
+<p>Elige tu skin favorita.</p>
 
 <div id="container">
 
@@ -250,6 +250,7 @@ var items = [
     {id: 'rakan', name: 'Rakan', image: 'iconos/RakanDawn.jpg'},
     {id: 'shen', name: 'Shen', image: 'iconos/ShenPulso.jpg'},
         {id: 'shyvana', name: 'Shyvana', image: 'iconos/ShyvanaGalaxy.jpg'},
+    {id: 'sivir', name: 'Sivir', image: 'iconos/SivirSangre.jpg'},
         {id: 'sona', name: 'Sona', image: 'iconos/SonaLove.jpg'},
     {id: 'vayne', name: 'Vayne', image: 'iconos/VayneLuz.jpg'},
     {id: 'xayah', name: 'Xayah', image: 'iconos/XayahDusk.jpg'},
