--- a/wrskins.html
+++ b/wrskins.html
@@ -206,7 +206,7 @@ button.disabled:hover {
 </style>
 </head>
 <body>
-<h1>Tus waifus</h1>
+<h1>Tus favoskins</h1>
 
 <p>Elige tu skin favorita.</p>
 
@@ -236,27 +236,41 @@ button.disabled:hover {
 var items = [
     // Define your items here
         {id: 'ahri', name: 'Ahri', image: 'iconos/AhriKDA.jpg'},
+        {id: 'ahriSpi', name: 'Ahri', image: 'iconos/ahri_spirit.jpg'},
+        {id: 'ahriGuar', name: 'Ahri', image: 'iconos/ahri_guardiana.jpg'},
     {id: 'ashe', name: 'Ashe', image: 'iconos/AsheFeerica.jpg'},
+    {id: 'asheCosmic', name: 'Ashe', image: 'iconos/ashe_cosmic.jpg'},
     {id: 'kayn', name: 'Kayn', image: 'iconos/KaynBB.jpg'},
     {id: 'akali', name: 'Akali', image: 'iconos/AkaliKDA.jpg'},
     {id: 'amumu', name: 'Amumu', image: 'iconos/AmumuRobot.jpg'},
     {id: 'brand', name: 'Brand', image: 'iconos/BrandDragon.jpg'},
     {id: 'ezreal', name: 'Ezreal', image: 'iconos/EzrealCristal.jpg'},
+    {id: 'ezrealArcade', name: 'Ezreal', image: 'iconos/ezreal_arcade.jpg'},
+    {id: 'eve', name: 'Evelynn', image: 'iconos/evelynn_coven.jpg'},
   {id: 'fiora', name: 'Fiora', image: 'iconos/FioraEspada.jpg'},
+        {id: 'irelia', name: 'Irelia', image: 'iconos/irelia_oeste.jpg'},
     {id: 'janna', name: 'Janna', image: 'iconos/JannaEmbrujada.jpg'},
     {id: 'jinx', name: 'Jinx', image: 'iconos/JinxExterminadora.jpg'},
     {id: 'kaisa', name: 'Kai\'sa', image: 'iconos/KaisaGuardiana.jpg'},
     {id: 'masteryi', name: 'Master Yi', image: 'iconos/YiEspada.jpg'},
+    {id: 'LuxA', name: 'Lux', image: 'iconos/lux_academia.jpg'},
+    {id: 'LuxP', name: 'Lux', image: 'iconos/lux_pajamas.jpg'},
     {id: 'rakan', name: 'Rakan', image: 'iconos/RakanDawn.jpg'},
+    {id: 'riven', name: SRiven', image: 'iconos/riven_spirit.jpg'},
     {id: 'shen', name: 'Shen', image: 'iconos/ShenPulso.jpg'},
         {id: 'shyvana', name: 'Shyvana', image: 'iconos/ShyvanaGalaxy.jpg'},
     {id: 'sivir', name: 'Sivir', image: 'iconos/SivirSangre.jpg'},
         {id: 'sona', name: 'Sona', image: 'iconos/SonaLove.jpg'},
+        {id: 'sonaArc', name: 'Sona', image: 'iconos/sona_arcade.jpg'},
     {id: 'vayne', name: 'Vayne', image: 'iconos/VayneLuz.jpg'},
+    {id: 'vayneLove', name: 'Vayne', image: 'iconos/vayne_love.jpg'},
     {id: 'xayah', name: 'Xayah', image: 'iconos/XayahDusk.jpg'},
     {id: 'xinzhao', name: 'Xin Zhao', image: 'iconos/LeesinAlma.jpg'},
     {id: 'yasuo', name: 'Yasuo', image: 'iconos/YasuoBoss.jpg'},
+    {id: 'yasuoS', name: 'Yasuo', image: 'iconos/yasuo_spirit.jpg'},
+    {id: 'yi', name: 'Master Yi', image: 'iconos/yi_spirit.jpg'},
     {id: 'yuumi', name: 'Yuumi', image: 'iconos/YuumiDirectora.jpg'},
+    {id: 'Zoe', name: 'Zoe', image: 'iconos/zoe_china.jpg'},
     {id: 'zyra', name: 'Zyra', image: 'iconos/ZyraAquelarre.jpg'}
 
 ];
