--- a/wrskins.html
+++ b/wrskins.html
@@ -277,7 +277,7 @@ var items = [
 
 var myPicker = new picker.Picker({
     items: items,
-    localStorageKey: 'wr-all-picker-state'
+    localStorageKey: 'wr-skin-picker-state'
 });
 
 var pickerUI = new PickerUI(myPicker, {
