--- a/wrskins.html
+++ b/wrskins.html
@@ -256,7 +256,7 @@ var items = [
     {id: 'LuxA', name: 'Lux', image: 'iconos/lux_academia.jpg'},
     {id: 'LuxP', name: 'Lux', image: 'iconos/lux_pajamas.jpg'},
     {id: 'rakan', name: 'Rakan', image: 'iconos/RakanDawn.jpg'},
-    {id: 'riven', name: SRiven', image: 'iconos/riven_spirit.jpg'},
+    {id: 'riven', name: 'Riven', image: 'iconos/riven_spirit.jpg'},
     {id: 'shen', name: 'Shen', image: 'iconos/ShenPulso.jpg'},
         {id: 'shyvana', name: 'Shyvana', image: 'iconos/ShyvanaGalaxy.jpg'},
     {id: 'sivir', name: 'Sivir', image: 'iconos/SivirSangre.jpg'},
