--- a/wrskins.html
+++ b/wrskins.html
@@ -234,45 +234,38 @@ button.disabled:hover {
 'use strict';
 
 var items = [
-    // Define your items here
-        {id: 'ahri', name: 'Ahri', image: 'iconos/AhriKDA.jpg'},
-        {id: 'ahriSpi', name: 'Ahri', image: 'iconos/ahri_spirit.jpg'},
-        {id: 'ahriGuar', name: 'Ahri', image: 'iconos/ahri_guardiana.jpg'},
-    {id: 'ashe', name: 'Ashe', image: 'iconos/AsheFeerica.jpg'},
-    {id: 'asheCosmic', name: 'Ashe', image: 'iconos/ashe_cosmic.jpg'},
-    {id: 'kayn', name: 'Kayn', image: 'iconos/KaynBB.jpg'},
-    {id: 'akali', name: 'Akali', image: 'iconos/AkaliKDA.jpg'},
-    {id: 'amumu', name: 'Amumu', image: 'iconos/AmumuRobot.jpg'},
-    {id: 'brand', name: 'Brand', image: 'iconos/BrandDragon.jpg'},
-    {id: 'ezreal', name: 'Ezreal', image: 'iconos/EzrealCristal.jpg'},
-    {id: 'ezrealArcade', name: 'Ezreal', image: 'iconos/ezreal_arcade.jpg'},
-    {id: 'eve', name: 'Evelynn', image: 'iconos/evelynn_coven.jpg'},
-  {id: 'fiora', name: 'Fiora', image: 'iconos/FioraEspada.jpg'},
-        {id: 'irelia', name: 'Irelia', image: 'iconos/irelia_oeste.jpg'},
-    {id: 'janna', name: 'Janna', image: 'iconos/JannaEmbrujada.jpg'},
-    {id: 'jinx', name: 'Jinx', image: 'iconos/JinxExterminadora.jpg'},
-    {id: 'kaisa', name: 'Kai\'sa', image: 'iconos/KaisaGuardiana.jpg'},
-    {id: 'masteryi', name: 'Master Yi', image: 'iconos/YiEspada.jpg'},
-    {id: 'LuxA', name: 'Lux', image: 'iconos/lux_academia.jpg'},
-    {id: 'LuxP', name: 'Lux', image: 'iconos/lux_pajamas.jpg'},
-    {id: 'rakan', name: 'Rakan', image: 'iconos/RakanDawn.jpg'},
-    {id: 'riven', name: 'Riven', image: 'iconos/riven_spirit.jpg'},
-    {id: 'shen', name: 'Shen', image: 'iconos/ShenPulso.jpg'},
-        {id: 'shyvana', name: 'Shyvana', image: 'iconos/ShyvanaGalaxy.jpg'},
-    {id: 'sivir', name: 'Sivir', image: 'iconos/SivirSangre.jpg'},
-        {id: 'sona', name: 'Sona', image: 'iconos/SonaLove.jpg'},
-        {id: 'sonaArc', name: 'Sona', image: 'iconos/sona_arcade.jpg'},
-    {id: 'vayne', name: 'Vayne', image: 'iconos/VayneLuz.jpg'},
-    {id: 'vayneLove', name: 'Vayne', image: 'iconos/vayne_love.jpg'},
-    {id: 'xayah', name: 'Xayah', image: 'iconos/XayahDusk.jpg'},
-    {id: 'xinzhao', name: 'Xin Zhao', image: 'iconos/LeesinAlma.jpg'},
-    {id: 'yasuo', name: 'Yasuo', image: 'iconos/YasuoBoss.jpg'},
-    {id: 'yasuoS', name: 'Yasuo', image: 'iconos/yasuo_spirit.jpg'},
-    {id: 'yi', name: 'Master Yi', image: 'iconos/yi_spirit.jpg'},
-    {id: 'yuumi', name: 'Yuumi', image: 'iconos/YuumiDirectora.jpg'},
-    {id: 'Zoe', name: 'Zoe', image: 'iconos/zoe_china.jpg'},
-    {id: 'zyra', name: 'Zyra', image: 'iconos/ZyraAquelarre.jpg'}
-
+    // Define your items here{id: 'amumubot', name: 'amumubot', image: 'iconos/amumubot.jpg'},
+{id: 'caitlynbikini', name: 'caitlynbikini', image: 'iconos/caitlynbikini.jpg'},
+{id: 'camilestar', name: 'camilestar', image: 'iconos/camilestar.jpg'},
+{id: 'fizzbot', name: 'fizzbot', image: 'iconos/fizzbot.jpg'},
+{id: 'fortunestar', name: 'fortunestar', image: 'iconos/fortunestar.jpg'},
+{id: 'gravesacademia', name: 'gravesacademia', image: 'iconos/gravesacademia.jpg'},
+{id: 'jannapez', name: 'jannapez', image: 'iconos/jannapez.jpg'},
+{id: 'jinxzombi', name: 'jinxzombi', image: 'iconos/jinxzombi.jpg'},
+{id: 'kaylepsy', name: 'kaylepsy', image: 'iconos/kaylepsy.jpg'},
+{id: 'luxpijama', name: 'luxpijama', image: 'iconos/luxpijama.jpg'},
+{id: 'namibot', name: 'namibot', image: 'iconos/namibot.jpg'},
+{id: 'namipez', name: 'namipez', image: 'iconos/namipez.jpg'},
+{id: 'nunuzombi', name: 'nunuzombi', image: 'iconos/nunuzombi.jpg'},
+{id: 'orianastar', name: 'orianastar', image: 'iconos/orianastar.jpg'},
+{id: 'rakansol', name: 'rakansol', image: 'iconos/rakansol.jpg'},
+{id: 'sararuina', name: 'sararuina', image: 'iconos/sararuina.jpg'},
+{id: 'Screenshot_20240319_000732_Wild Rift', name: 'Screenshot_20240319_000732_Wild Rift', image: 'iconos/Screenshot_20240319_000732_Wild Rift.jpg'},
+{id: 'Screenshot_20240319_001051_Wild Rift', name: 'Screenshot_20240319_001051_Wild Rift', image: 'iconos/Screenshot_20240319_001051_Wild Rift.jpg'},
+{id: 'Screenshot_20240324_214136_Wild Rift', name: 'Screenshot_20240324_214136_Wild Rift', image: 'iconos/Screenshot_20240324_214136_Wild Rift.jpg'},
+{id: 'Screenshot_20240324_214152_Wild Rift', name: 'Screenshot_20240324_214152_Wild Rift', image: 'iconos/Screenshot_20240324_214152_Wild Rift.jpg'},
+{id: 'sennaestelar', name: 'sennaestelar', image: 'iconos/sennaestelar.jpg'},
+{id: 'sennakda', name: 'sennakda', image: 'iconos/sennakda.jpg'},
+{id: 'sennastar', name: 'sennastar', image: 'iconos/sennastar.jpg'},
+{id: 'shyvanabot', name: 'shyvanabot', image: 'iconos/shyvanabot.jpg'},
+{id: 'sonaarcade', name: 'sonaarcade', image: 'iconos/sonaarcade.jpg'},
+{id: 'sorakabot', name: 'sorakabot', image: 'iconos/sorakabot.jpg'},
+{id: 'tristanadiablo', name: 'tristanadiablo', image: 'iconos/tristanadiablo.jpg'},
+{id: 'veigarpeluche', name: 'veigarpeluche', image: 'iconos/veigarpeluche.jpg'},
+{id: 'xayahluna', name: 'xayahluna', image: 'iconos/xayahluna.jpg'},
+{id: 'yasuoarcade', name: 'yasuoarcade', image: 'iconos/yasuoarcade.jpg'},
+{id: 'yasuoflor', name: 'yasuoflor', image: 'iconos/yasuoflor.jpg'},
+{id: 'yonerosa', name: 'yonerosa', image: 'iconos/yonerosa.jpg'},
 ];
 
 var myPicker = new picker.Picker({
