--- a/wrall.html
+++ b/wrall.html
@@ -277,6 +277,7 @@ var items = [
     {id: 'jhin', name: 'Jhin', image: 'iconos/jhin.jpg'},
     {id: 'jinx', name: 'Jinx', image: 'iconos/jinx.jpg'},
     {id: 'kaisa', name: 'Kai\'sa', image: 'iconos/kaisa.jpg'},
+    {id: 'kalista', name: 'Kalista', image: 'iconos/kalista.jpg'},
     {id: 'karma', name: 'Karma', image: 'iconos/karma.jpg'},
     {id: 'kassadin', name: 'Kassadin', image: 'iconos/kassadin.jpg'},
     {id: 'katarina', name: 'Katarina', image: 'iconos/katarina.jpg'},
@@ -290,6 +291,7 @@ var items = [
     {id: 'lulu', name: 'Lulu', image: 'iconos/lulu.jpg'},
     {id: 'lux', name: 'Lux', image: 'iconos/lux.jpg'},
     {id: 'malphite', name: 'Malphite', image: 'iconos/malphite.jpg'},
+    {id: 'maokai', name: 'Maokai', image: 'iconos/maokai.jpg'},
     {id: 'masteryi', name: 'Master Yi', image: 'iconos/masteryi.jpg'},
     {id: 'missfortune', name: 'Miss Fortune', image: 'iconos/missfortune.jpg'},
     {id: 'morgana', name: 'Morgana', image: 'iconos/morgana.jpg'},
@@ -332,6 +334,7 @@ var items = [
     {id: 'varus', name: 'Varus', image: 'iconos/varus.jpg'},
     {id: 'vayne', name: 'Vayne', image: 'iconos/vayne.jpg'},
     {id: 'veigar', name: 'Veigar', image: 'iconos/veigar.jpg'},
+    {id: 'viego', name: 'Viego', image: 'iconos/viego.jpg'},
   {id: 'vladimir', name: 'Vladimir', image: 'iconos/vladimir.jpg'},
     {id: 'vex', name: 'Vex', image: 'iconos/vex.jpg'},
     {id: 'vi', name: 'Vi', image: 'iconos/vi.jpg'},
